--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 	<div class="wrapper">
 		<header>
 			<img src="https://instagram.fcdg2-1.fna.fbcdn.net/vp/46301a54ab82796c0cfa98c73fc21faa/5D854480/t51.2885-15/e35/61428068_330644114281157_8669327527111876279_n.jpg?_nc_ht=instagram.fcdg2-1.fna.fbcdn.net" width="500px"; length="800px";>
-			<h1>Electric Comics</h1>
 			<a href="https://www.instagram.com/electriccomics/" target="_blank"; title="Find us on Instagram">Find us on Instagram</a>
+			<h1>Electric Comics</h1>
 		</header>
 		<div class="content">
 			<h2>Our comics</h2>
-			<p>Stories and comics about Robert and his friends -and not so friends-.</p>
+			<p class="caption1">Stories and comics about Robert and his friends -and not so friends-.</p>
 			<img class="medium" src="https://instagram.fcdg2-1.fna.fbcdn.net/vp/35e99404a636db26d23b75e35f938a57/5D89FBC4/t51.2885-15/e35/60267559_1296488693848998_5627086911000129363_n.jpg?_nc_ht=instagram.fcdg2-1.fna.fbcdn.net" width="500px"; length="500px";>
-			<p class="caption">Suicide</p>
+			<p class="caption2">Suicide</p>
 		</div>
 		<footer>
 			<li>Made by <a href="https://www.instagram.com/benjyyyg/" target="_blank"; title="Find me on Instagram">Benjamin Garcia</a> and Emma Garcia</li>
